--- a/frontent/src/Login.css
+++ b/frontent/src/Login.css
@@ -1,5 +1,5 @@
 .login-container{
-    background-image: url('C:\login task\frontent\public\bg-2.jpg');
+    background-image: url('C:\Users\NASTAF_12\Desktop\project\Login\frontent\public\bg-1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 }
